--- a/app.html
+++ b/app.html
@@ -10,39 +10,5 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Personal Portfolio</title>
   </head>
-  <body>
-    <nav>
-      <div class="nav-logo">
-        <a href="#">
-          <img src="image/logo.png" />
-        </a>
-      </div>
-
-      <ul class="nav-links">
-        <li class="link"><a href="#">Home</a></li>
-        <li id="link1" class="link"><a href="#">Features</a></li>
-        <li id="link2" class="link"><a href="#">Pricing</a></li>
-        <li id="link3" class="link"><a href="#">About</a></li>
-      </ul>
-      <button class="btn">Hire Me</button>
-    </nav>
-
-    <header class="container">
-      <div class="content">
-        <span class="blur"></span>
-        <span class="blur"></span>
-        <h4>CREATE YOUR SITE LIKE A PRO</h4>
-        <h1>Hi, I'm <span>Reyhan</span>, Web Developer</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus
-          rem eos aliquid quo rerum temporibus ipsum distinctio numquam ut omnis
-          placeat, nam sint atque quos dolorem laborum? Rerum, esse dolorem.
-        </p>
-        <button class="btn">Get Started</button>
-      </div>
-      <div class="image">
-        <img src="image/header.png" />
-      </div>
-    </header>
-  </body>
+  <body></body>
 </html>
